...
                    Button {
                        showLinkAccountForm = true
                    } label: {
                        CustomButtonLabel(message: "Créer un compte permanent", color: .accentColor, isSelected: false)
                    }
                    .disabled(viewModel.isLoading)
                    .accessibilityIdentifier("button.showLinkAccountForm")

                    Button {
                        viewModel.showDeleteAlert = true
                    } label: {
                        CustomButtonLabel(message: "Arrêter l'essai", color: .orange, isSelected: false)
                    }
                    .disabled(viewModel.isLoading)
                    .accessibilityIdentifier("button.stopDemo")
                }
                .padding(.horizontal, 24)
                .padding(.top, 30)
                .padding(.bottom, 40)
            }
            .echoBackground()
...
